# ot-harjoitus

./: .coveragerc  .gitignore  .pylintrc  README.md  bodyparts.csv  pyproject.toml  stretches.csv  tasks.py  tasks.py.save  test_bodypart.csv
dokumentaatio/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  tehtava1.md  tehtava2.md  tehtava3.md  tehtava4.md
src/: .env  .gitignore  BodypartStretch.py  bodypart_stretch.py  bodyparts.csv  bodyparts.py  config.py  database_connection.py  harjoittelu.db  index.py  initialize_csv.py  initialize_database.py  stretches.csv  stretches.py  tekstikayttoliittyma.py  tietokanta.py  ui_view.py  users.py
src/entities/: bodypart.py
src/repositories/: bodypart_repository.py  bodypart_stretch_repository.py  stretch_repository.py  user_repository.py
src/services/: stretching_services.py
src/tests/: bodypart_stretch_test.py  bodypart_test.py  stretch_test.py  stretching_services_test.py  user_test.py
src/ui/: admin_view.py  bodypart_view.py  bodypart_view_admin.py  input_output.py  login_view.py  register_login_view.py  register_view.py  stretch_view.py  stretch_view_admin.py  ui.py  ui_uusi.py
