[tool.poetry]
name = "ot-harjoitustyö"
version = "0.1.0"
description = ""
authors = ["Susanna Kinnunen <susanna.kinnunen@windowslive.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
